--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
   <title>Kobe Bryant Tribute</title>
   <meta charset="UTF-8"/>
+  <link rel="stylesheet" href="./kobe.css">
 </head>
 <body>
-    
+  <div id="main">
+    <h1 id="title">Kobe Bryant</h1>
+  </div>
   <script>
     console.log("Ready for edits")
   </script>
