--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
   <div id="main">
     <h1 id="title">Kobe Bryant</h1>
   </div>
+  <div>
+    <nav id="navbar">
+      <a href="">Early Life</a>
+      <a href="">Career History</a>
+      <a href="">Accolades</a>
+      <a href="">Post-Basketball</a>
+    </nav>
+  </div>
+  <div>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/5/56/Kobe_Bryant_2014.jpg" alt="The Black Mamba">
+  </div>
+  <div>
+    <ul class="bullets">
+      <li>5x NBA Champion</li>
+      <li>2x NBA Finals MVP</li>
+      <li>1x NBA MVP</li>
+    </ul>
+  </div>
   <script>
     console.log("Ready for edits")
   </script>
